# hr-document-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAG_code.rar  README.md  architecture.xlsx  docker-compose.yml  pyproject.toml  reset.ps1  reset.sh  start.ps1  start.sh  stop.ps1  stop.sh
app/: main.py
app/auth/: dependencies.py  security.py
app/coordinator/: formal_check_coordinator.py  semantic_check_coordinator.py
app/core/: config.py  logging.py  metrics.py  privacy.py
app/db/: __init__.py  init_db.py  models.py  session.py
app/extractors/: __init__.py  contact_extractor.py  date_extractor.py  document_type_classifier.py  entity_extractor.py  section_classifier.py  skill_extractor.py  url_extractor.py
app/llm/: __init__.py  base.py  factory.py  json_parser.py  mock_client.py  ollama_client.py  openai_compatible_client.py
app/middleware/: request_logging.py
app/parsers/: base.py  docx_parser.py  parser_factory.py  pdf_parser.py
app/rag/: __init__.py  chunker.py  embedding_factory.py  embedding_model.py  faiss_store.py  index_builder.py  (+5 more)
docs/: ACCEPTANCE_CHECKLIST.md  ADMIN.md  API.md  ARCHITECTURE.md  BACKUP_RESTORE.md  DEMO_SCENARIO.md  FINAL_PROJECT_SUMMARY.md  MONITORING.md  TESTING.md  USER_GUIDE.md
rag_code_documentation_md/: README.md
scripts/: backup_db.py  build_rag_index.py  create_demo_samples.py  restore_db.py  smoke_test.ps1  smoke_test.sh
tests/: auth_helpers.py  conftest.py  test_admin_api.py  test_auth_api.py  test_backup_restore.py  test_completeness_agent.py  test_contact_extractor.py  test_contact_validation_agent.py  test_contradiction_agent.py  test_date_extractor.py  test_document_api.py  test_document_type_classifier.py  test_docx_export.py  test_docx_parser.py  test_entity_extractor.py  test_formal_check_coordinator.py  test_health.py  test_llm_api.py  test_llm_interface.py  test_llm_semantic_agent.py  test_metrics.py  test_no_store_mode.py  test_parser_factory.py  test_pdf_parser.py  test_performance.py  test_privacy.py  test_prometheus_metrics.py  test_rag_api.py  test_rag_chunker.py  test_rag_embedding_model.py  test_rag_faiss_store.py  test_rag_index_builder.py  test_rag_retriever.py  test_rag_service.py  test_rag_status_api.py  test_rag_vector_store.py  test_report_api.py  test_report_builder.py  test_report_ownership.py  test_report_storage_privacy.py  (+11 more)
(+83 files in other folders)
