[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-doc-checker"
version = "0.1.0"
description = "Prototype of HR and business document checker with AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "python-docx>=1.1.0,<2.0",
    "PyMuPDF>=1.24.0,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "jinja2>=3.1,<4.0",
    "numpy>=1.26,<3.0",
    "faiss-cpu>=1.9.0,<2.0",
    "sentence-transformers>=3.0.0,<4.0",
    "httpx>=0.27,<1.0",
    "email-validator>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.3,<1.0",
    "pytest-cov>=5.0,<7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning"
]
markers = [
    "performance: performance tests",
    "docker: docker smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
